@@ -81,7 +81,7 @@ public class Activity {
 
     // ----------- Setters ----------- //
     public void setName(String name) {
-        if (name == null || name.trim().isEmpty())
+        if (name == null || name.isBlank())
             throw new IllegalArgumentException("Activity name cannot be empty.");
         this.name = name.trim();
     }
